--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -19,7 +19,7 @@ body {
     background: linear-gradient(to bottom, #d4d4d4, #fafafa);
     position: fixed;
     top: 0%;
-    padding-top: 20%;
+    padding-top: 15%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -44,6 +44,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 5%;
+    margin-bottom: 0%
     text-align: center;
 }
 
