--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -44,7 +44,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 5%;
-    margin-bottom: 0%
+    margin-bottom: 0%;
     text-align: center;
 }
 
