--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -15,6 +15,11 @@ body {
     min-height: 100vh;
 }
 
+::selection {
+    color: #fafafa;
+    background: #e6e6e6;
+}
+
 .profile {
     background: linear-gradient(to bottom, #d4d4d4, #fafafa);
     position: fixed;
