--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -15,9 +15,22 @@ body {
     min-height: 100vh;
 }
 
+.loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #c6c6c6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+}
+
 ::selection {
     color: #fafafa;
-    background: #e6e6e6;
+    background: #c6c6c6;
 }
 
 .profile {
