--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -42,6 +42,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    z-index: 1;
 }
 
 .pfp {
@@ -65,6 +66,7 @@ body {
     padding: 5%;
     margin-bottom: 10%;
     text-align: center;
+    z-index: 2;
 }
 
 .link-container {
