--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -16,16 +16,16 @@ body {
 }
 
 .loading-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #c6c6c6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #d4d4d4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
 }
 
 ::selection {
@@ -87,7 +87,21 @@ body {
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
     border-style: none;
-  }
+}
+
+.link-container :active {
+    transition: 0.1s;
+    border-radius: 5px;
+    border-style: none;
+    mix-blend-mode: exclusion;
+}
+
+.link-container :hover {
+    transition: 0.4s;
+    background-color: #eeeeee;
+    border-radius: 5px;
+    border-style: none;
+}
   
 .icons {
     max-width: 9%;
