--- a/docs/widestylesocials.css
+++ b/docs/widestylesocials.css
@@ -15,6 +15,24 @@ body {
     min-height: 100vh;
 }
 
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #d4d4d4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+::selection {
+color: #fafafa;
+background: #c6c6c6;
+}
+
 .profile {
     background: linear-gradient(to bottom, #d4d4d4, #fafafa);
     position: fixed;
@@ -24,6 +42,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    z-index: 1;
 }
 
 .pfp {
@@ -45,6 +64,7 @@ body {
     align-items: center;
     padding: 3%;
     text-align: center;
+    z-index: 2;
 }
 
 .link-container {
@@ -66,7 +86,23 @@ body {
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
     border-style: none;
-  }
+    cursor: pointer;
+}
+
+.link-container :active {
+    transition: 0.4s;
+    border-radius: 5px;
+    border-style: none;
+    mix-blend-mode: exclusion;
+    background-color: white;
+}
+
+.link-container :hover {
+    transition: 0.4s;
+    background-color: #eeeeee;
+    border-radius: 5px;
+    border-style: none;
+}
   
 .icons {
     max-width: 7%;
