--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -82,6 +82,7 @@ body {
     font-size: 140%;
     color: #000;
     margin-right: 2%;
+    margin-bottom: 2%;
     display: flex;
     align-items: center;
     background-color: white;
