--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -38,11 +38,11 @@ body {
     position: fixed;
     top: 0%;
     padding-top: 12%;
-    display: inline-flex;
+    margin-bottom: 2%;
+    display: inline-grid;
     justify-content: center;
     align-items: center;
     text-align: center;
-    z-index: 1;
 }
 
 .pfp {
@@ -65,7 +65,6 @@ body {
     align-items: center;
     padding: 5%;
     margin-bottom: 0%;
-    z-index: 2;
 }
 
 .link-container {
@@ -82,7 +81,6 @@ body {
     font-size: 140%;
     color: #000;
     margin-right: 2%;
-    margin-bottom: 2%;
     display: flex;
     align-items: center;
     background-color: white;
