--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -38,7 +38,7 @@ body {
     position: fixed;
     top: 0%;
     padding-top: 12%;
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
