--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -59,7 +59,7 @@ body {
 }
 
 .linkspace {
-    display: flex;
+    display: block;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
