--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -38,11 +38,11 @@ body {
     position: fixed;
     top: 0%;
     padding-top: 12%;
-    margin-bottom: 2%;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    z-index: 1;
 }
 
 .pfp {
@@ -59,12 +59,13 @@ body {
 }
 
 .linkspace {
-    display: block;
+    display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
     padding: 5%;
     margin-bottom: 0%;
+    z-index: 2;
 }
 
 .link-container {
@@ -86,7 +87,6 @@ body {
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
     border-style: none;
-    text-align: center;
 }
 
 .link-container :active {
