--- a/docs/stylesocials.css
+++ b/docs/stylesocials.css
@@ -37,7 +37,7 @@ body {
     background: linear-gradient(to bottom, #d4d4d4, #fafafa);
     position: fixed;
     top: 0%;
-    padding-top: 7%;
+    padding-top: 12%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -47,8 +47,8 @@ body {
 
 .pfp {
     margin: 2%;
-    max-width: 20%;
-    max-height: 20%;
+    max-width: 23%;
+    max-height: 23%;
     border-radius: 50%;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
@@ -62,6 +62,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
     padding: 5%;
     margin-bottom: 0%;
     z-index: 2;
