--- a/docs/stylehome.css
+++ b/docs/stylehome.css
@@ -19,9 +19,10 @@
   }
   
   .main-content {
-    max-width: 700px;
+    max-width: 600px;
     margin: 0 auto;
-    padding: 40px 20px;
+    padding-top: 20px;
+    padding-bottom: 15px;
     display: flex;
     flex-direction: column;
     gap: 60px;
@@ -52,7 +53,7 @@
   /* Tamanho fixo dos cards */
   .card-list li {
     transform-style: preserve-3d;
-    width: 400px;
+    width: 300px;
   }
   
   /* Link do card com imagem */
