--- a/docs/style.css
+++ b/docs/style.css
@@ -76,7 +76,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     padding-top: 220px;
-    padding-bottom: 40px;
+    /*padding-bottom: 40px;*/
     width: 100%;
     z-index: 2;
 }
@@ -85,7 +85,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     width: 100%;
 }
 
@@ -94,7 +94,7 @@ body {
     align-items: center;
     justify-content: flex-start;
     text-decoration: none;
-    width: 350px;
+    width: 330px;
     max-width: 90%;
     font-size: 140%;
     color: #000;
